--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         location.href = location.href.replace("http://", "https://");
       }
     </script>
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <link href="/css/mapbox-gl.css" rel="stylesheet" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#fff" />
