--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,22 @@
     <div id="map" class="not-visible"></div>
     <script src="/js/mapbox-gl.js"></script>
     <script>
+      // Open the modal
+      netlifyIdentity.open();
+
+      // Get the current user:
+      // Available after on('init') is invoked
+      const user = netlifyIdentity.currentUser();
+
+      // Bind to events
+      netlifyIdentity.on('init', user => console.log('init', user));
+      netlifyIdentity.on('login', user => console.log('login', user));
+      netlifyIdentity.on('logout', () => console.log('Logged out'));
+      netlifyIdentity.on('error', err => console.error('Error', err));
+      netlifyIdentity.on('open', () => console.log('Widget opened'));
+      netlifyIdentity.on('close', () => console.log('Widget closed'));
+    </script>
+    <script>
       /**
        * Global map object
        */
