--- a/public/index.html
+++ b/public/index.html
@@ -121,14 +121,16 @@
 
       // Get the current user:
       // Available after on('init') is invoked
-      const user = netlifyIdentity.currentUser();
-      if (!user) {
-        // Open the modal
-        netlifyIdentity.open();
-      }
+//      const user = netlifyIdentity.currentUser();
+
 
       // Bind to events
-      netlifyIdentity.on('init', user => console.log('init', user));
+      netlifyIdentity.on('init', user => {
+        console.log('init', user)
+        if (!user) {
+          netlifyIdentity.open();
+        }
+      });
       netlifyIdentity.on('login', user => console.log('login', user));
       netlifyIdentity.on('logout', () => console.log('Logged out'));
       netlifyIdentity.on('error', err => console.error('Error', err));
